--- a/gait-recognition.ipynb
+++ b/gait-recognition.ipynb
@@ -309,9 +309,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33104\n",
+      "33104\n",
+      "33104\n"
+     ]
+    }
+   ],
    "source": [
     "# Train Data\n",
     "accelerometer_train = convert_to_model(load_dev_gait_information(1, ACCELEROMETER, TRAIN))\n",
@@ -540,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,14 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv1D, MaxPooling1D, Flatten, Dense, Dropout, BatchNormalization"
+    "from keras.models import Sequential, load_model\n",
+    "from keras.layers import Conv1D, MaxPooling1D, Flatten, Dense, Dropout, BatchNormalization, Input\n",
+    "from keras.utils import to_categorical\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -592,13 +604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "FILTER_SIZE = 64\n",
     "\n",
-    "def create_cnn(input_shape: tuple[int, int], num_classes: int, num_layers: int = 3, dropout: float = 0.3, pool_size: int = 2, kernel_size: int = 3, activation: str = 'relu', density: int = 128):\n",
+    "def create_cnn(input_shape: tuple[int, int], num_classes: int, num_layers: int = 3, dropout: float = 0.3, pool_size: int = 2, kernel_size: int = 3, activation: str = 'relu', density: int = 128) -> Sequential:\n",
     "    '''\n",
     "    Create a convolutional neural network with the given parameters.\n",
     "\n",
@@ -622,20 +634,14 @@
     "    # Create the filter size variable that will increase every layer\n",
     "    filter_size = FILTER_SIZE\n",
     "\n",
+    "    # Add the input layer\n",
+    "    layers.append(Input(shape=input_shape))\n",
+    "\n",
     "    # Iterate over the process of every layer creation\n",
     "    for layer in range(num_layers):\n",
     "\n",
-    "        # Check if this is the first layer\n",
-    "        if layer == 0:\n",
-    "\n",
-    "            # Add the 1D Convolutional layer\n",
-    "            layers.append(Conv1D(filters=filter_size, kernel_size=kernel_size, activation=activation, input_shape=input_shape))\n",
-    "\n",
-    "        # In case it is not the first layer\n",
-    "        else:\n",
-    "\n",
-    "            # Add the 1D Concolutional layer\n",
-    "            layers.append(Conv1D(filters=filter_size, kernel_size=kernel_size, activation=activation))\n",
+    "        # Add the 1D Concolutional layer\n",
+    "        layers.append(Conv1D(filters=filter_size, kernel_size=kernel_size, activation=activation))\n",
     "\n",
     "        # Add the normalization layer\n",
     "        layers.append(BatchNormalization())\n",
@@ -653,7 +659,7 @@
     "        else:\n",
     "\n",
     "            # Add the dropout layer\n",
-    "            layers.append(Dropout(dropout + 0.1))\n",
+    "            layers.append(Dropout(dropout))\n",
     "\n",
     "        # Double the filter size\n",
     "        filter_size *= 2\n",
@@ -683,13 +689,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33104\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine the data into one single matrix (Steps * 128 * 6)\n",
     "combined_data_train = np.concatenate([final_accelerometer_train, final_gyroscope_train], axis=-1)\n",
     "combined_data_test = np.concatenate([final_accelerometer_test, final_gyroscope_test], axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalization of the Input Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33104\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the normalization scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit and normalize the training data to the scaler\n",
+    "X_train = scaler.fit_transform(combined_data_train.reshape(-1, 6)).reshape(combined_data_train.shape)\n",
+    "\n",
+    "# Normalize the test data\n",
+    "X_test = scaler.transform(combined_data_test.reshape(-1, 6)).reshape(combined_data_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One-Hot Enconding of the Output Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert training labels to One-Hot\n",
+    "Y_train = to_categorical(final_output_train)\n",
+    "\n",
+    "# Convert test labels to One-Hot\n",
+    "Y_test = to_categorical(final_output_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Building the CNN Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### No Hyperparameter Tuning (Default Model Parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the default CNN model\n",
+    "model = create_cnn(X_train.shape[1::], Y_train.shape[1])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training the CNN Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Epochs = 50 | Batch-Size = 32 | Validation-Split = 20% (Default Training Parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33104\n",
+      "33104\n",
+      "Epoch 1/50\n",
+      "828/828 - 12s - 14ms/step - accuracy: 0.5424 - loss: 1.9405 - val_accuracy: 0.9113 - val_loss: 0.3682\n",
+      "Epoch 2/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.8064 - loss: 0.7371 - val_accuracy: 0.9301 - val_loss: 0.2846\n",
+      "Epoch 3/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.8480 - loss: 0.5693 - val_accuracy: 0.9462 - val_loss: 0.2172\n",
+      "Epoch 4/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.8740 - loss: 0.4615 - val_accuracy: 0.9554 - val_loss: 0.1840\n",
+      "Epoch 5/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.8835 - loss: 0.4307 - val_accuracy: 0.9574 - val_loss: 0.1665\n",
+      "Epoch 6/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.8967 - loss: 0.3823 - val_accuracy: 0.9604 - val_loss: 0.1608\n",
+      "Epoch 7/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9023 - loss: 0.3597 - val_accuracy: 0.9631 - val_loss: 0.1541\n",
+      "Epoch 8/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9115 - loss: 0.3241 - val_accuracy: 0.9677 - val_loss: 0.1356\n",
+      "Epoch 9/50\n",
+      "828/828 - 10s - 13ms/step - accuracy: 0.9141 - loss: 0.3083 - val_accuracy: 0.9678 - val_loss: 0.1293\n",
+      "Epoch 10/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9202 - loss: 0.2927 - val_accuracy: 0.9678 - val_loss: 0.1268\n",
+      "Epoch 11/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9239 - loss: 0.2823 - val_accuracy: 0.9710 - val_loss: 0.1186\n",
+      "Epoch 12/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9263 - loss: 0.2591 - val_accuracy: 0.9678 - val_loss: 0.1266\n",
+      "Epoch 13/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9308 - loss: 0.2487 - val_accuracy: 0.9687 - val_loss: 0.1252\n",
+      "Epoch 14/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9330 - loss: 0.2464 - val_accuracy: 0.9737 - val_loss: 0.1065\n",
+      "Epoch 15/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9362 - loss: 0.2245 - val_accuracy: 0.9701 - val_loss: 0.1095\n",
+      "Epoch 16/50\n",
+      "828/828 - 12s - 14ms/step - accuracy: 0.9369 - loss: 0.2256 - val_accuracy: 0.9752 - val_loss: 0.1007\n",
+      "Epoch 17/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9385 - loss: 0.2158 - val_accuracy: 0.9734 - val_loss: 0.1075\n",
+      "Epoch 18/50\n",
+      "828/828 - 11s - 14ms/step - accuracy: 0.9398 - loss: 0.2096 - val_accuracy: 0.9740 - val_loss: 0.1009\n",
+      "Epoch 19/50\n",
+      "828/828 - 11s - 14ms/step - accuracy: 0.9457 - loss: 0.2015 - val_accuracy: 0.9748 - val_loss: 0.1076\n",
+      "Epoch 20/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9456 - loss: 0.1889 - val_accuracy: 0.9728 - val_loss: 0.1076\n",
+      "Epoch 21/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9492 - loss: 0.1807 - val_accuracy: 0.9710 - val_loss: 0.1120\n",
+      "Epoch 22/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9464 - loss: 0.1811 - val_accuracy: 0.9761 - val_loss: 0.0981\n",
+      "Epoch 23/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9503 - loss: 0.1758 - val_accuracy: 0.9758 - val_loss: 0.0926\n",
+      "Epoch 24/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9515 - loss: 0.1714 - val_accuracy: 0.9778 - val_loss: 0.0893\n",
+      "Epoch 25/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9524 - loss: 0.1613 - val_accuracy: 0.9792 - val_loss: 0.0875\n",
+      "Epoch 26/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9543 - loss: 0.1603 - val_accuracy: 0.9798 - val_loss: 0.0812\n",
+      "Epoch 27/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9547 - loss: 0.1589 - val_accuracy: 0.9767 - val_loss: 0.0934\n",
+      "Epoch 28/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9585 - loss: 0.1462 - val_accuracy: 0.9787 - val_loss: 0.0887\n",
+      "Epoch 29/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9593 - loss: 0.1414 - val_accuracy: 0.9773 - val_loss: 0.0865\n",
+      "Epoch 30/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9617 - loss: 0.1356 - val_accuracy: 0.9779 - val_loss: 0.0827\n",
+      "Epoch 31/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9613 - loss: 0.1377 - val_accuracy: 0.9802 - val_loss: 0.0835\n",
+      "Epoch 32/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9611 - loss: 0.1335 - val_accuracy: 0.9795 - val_loss: 0.0841\n",
+      "Epoch 33/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9619 - loss: 0.1293 - val_accuracy: 0.9795 - val_loss: 0.0831\n",
+      "Epoch 34/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9634 - loss: 0.1265 - val_accuracy: 0.9804 - val_loss: 0.0749\n",
+      "Epoch 35/50\n",
+      "828/828 - 10s - 13ms/step - accuracy: 0.9639 - loss: 0.1231 - val_accuracy: 0.9816 - val_loss: 0.0725\n",
+      "Epoch 36/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9665 - loss: 0.1136 - val_accuracy: 0.9813 - val_loss: 0.0742\n",
+      "Epoch 37/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9664 - loss: 0.1139 - val_accuracy: 0.9820 - val_loss: 0.0771\n",
+      "Epoch 38/50\n",
+      "828/828 - 10s - 13ms/step - accuracy: 0.9665 - loss: 0.1108 - val_accuracy: 0.9807 - val_loss: 0.0803\n",
+      "Epoch 39/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9687 - loss: 0.1052 - val_accuracy: 0.9811 - val_loss: 0.0723\n",
+      "Epoch 40/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9688 - loss: 0.1043 - val_accuracy: 0.9817 - val_loss: 0.0717\n",
+      "Epoch 41/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9696 - loss: 0.1037 - val_accuracy: 0.9805 - val_loss: 0.0740\n",
+      "Epoch 42/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9667 - loss: 0.1108 - val_accuracy: 0.9822 - val_loss: 0.0707\n",
+      "Epoch 43/50\n",
+      "828/828 - 11s - 14ms/step - accuracy: 0.9692 - loss: 0.1042 - val_accuracy: 0.9820 - val_loss: 0.0718\n",
+      "Epoch 44/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9704 - loss: 0.1005 - val_accuracy: 0.9823 - val_loss: 0.0722\n",
+      "Epoch 45/50\n",
+      "828/828 - 11s - 14ms/step - accuracy: 0.9698 - loss: 0.0997 - val_accuracy: 0.9829 - val_loss: 0.0678\n",
+      "Epoch 46/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9705 - loss: 0.0977 - val_accuracy: 0.9820 - val_loss: 0.0674\n",
+      "Epoch 47/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9710 - loss: 0.0966 - val_accuracy: 0.9843 - val_loss: 0.0644\n",
+      "Epoch 48/50\n",
+      "828/828 - 10s - 13ms/step - accuracy: 0.9721 - loss: 0.0934 - val_accuracy: 0.9831 - val_loss: 0.0698\n",
+      "Epoch 49/50\n",
+      "828/828 - 11s - 13ms/step - accuracy: 0.9722 - loss: 0.0960 - val_accuracy: 0.9841 - val_loss: 0.0698\n",
+      "Epoch 50/50\n",
+      "828/828 - 10s - 12ms/step - accuracy: 0.9727 - loss: 0.0902 - val_accuracy: 0.9837 - val_loss: 0.0654\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x7953588a4e80>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the model with the given data\n",
+    "model.fit(\n",
+    "    X_train, Y_train,\n",
+    "    validation_split=0.2,\n",
+    "    epochs=50,\n",
+    "    batch_size=32,\n",
+    "    verbose=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving and Loading of Trained CNN Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘models’: File exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODELS = 'models/'\n",
+    "MODEL_EXTENSION = '.keras'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Saving of the Trained CNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the desired name from user to save the model\n",
+    "name = input('Save model with name:')\n",
+    "\n",
+    "# Save the model with the desired name\n",
+    "model.save(MODELS + name  + MODEL_EXTENSION)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Loading of a Pre-Trained CNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guinucool/.local/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:757: UserWarning: Skipping variable loading for optimizer 'rmsprop', because it has 18 variables whereas the saved optimizer has 34 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the desired name from user to save the model\n",
+    "name = input('Load model with name:')\n",
+    "\n",
+    "# Save the model with the desired name\n",
+    "model = load_model(MODELS + name  + MODEL_EXTENSION)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation of the CNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9430 - loss: 0.6656\n",
+      "Accuracy: 0.9406\n",
+      "Loss: 0.7020\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the accuracy and loss of the model in the test data\n",
+    "test_loss, test_accuracy = model.evaluate(X_test, Y_test)\n",
+    "\n",
+    "# Print the model performance\n",
+    "print(f'Accuracy: {test_accuracy:.4f}')\n",
+    "print(f'Loss: {test_loss:.4f}')"
    ]
   }
  ],
