[INS] Template extraction complete.

--- a/gait-recognition.ipynb
+++ b/gait-recognition.ipynb
@@ -807,83 +807,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Template Extraction and Matching"
+    "### 2. Template Extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "512\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([-6.88811472, -6.90261938, -6.91621641, -6.90660455, -6.85324585,\n",
-       "       -6.7415772 , -6.57222898, -6.35504771, -6.10256856, -5.82838433,\n",
-       "       -5.54333789, -5.25599112, -4.97416153, -4.70484638, -4.45348441,\n",
-       "       -4.2242336 , -4.02056379, -3.84515801, -3.6976825 , -3.57554289,\n",
-       "       -3.47530098, -3.3917322 , -3.31000146, -3.20979208, -3.07256544,\n",
-       "       -2.88318111, -2.64095695, -2.35517862, -2.03531611, -1.68980927,\n",
-       "       -1.31772565, -0.91108221, -0.4619272 ,  0.03729732,  0.58953876,\n",
-       "        1.19401137,  1.85005973,  2.55764752,  3.32552196,  4.17066171,\n",
-       "        5.11070121,  6.16182544,  7.30382144,  8.47967886,  9.62911303,\n",
-       "       10.68982785, 11.57349203, 12.16551333, 12.35072988, 12.01973174,\n",
-       "       11.19950815, 10.06661457,  8.80598211,  7.60016737,  6.55798763,\n",
-       "        5.7013569 ,  5.04393806,  4.59438733,  4.32706076,  4.17804635,\n",
-       "        4.0830288 ,  3.98131292,  3.87428175,  3.84145573,  3.97299734,\n",
-       "        4.38208444,  5.09771845,  5.96539379,  6.76592137,  7.23997127,\n",
-       "        7.26217104,  6.94120135,  6.40933968,  5.79539765,  5.17303055,\n",
-       "        4.53679551,  3.87807277,  3.19153812,  2.48480256,  1.78536615,\n",
-       "        1.12397864,  0.53218201,  0.03624531, -0.35029911, -0.62091596,\n",
-       "       -0.77476581, -0.81115448, -0.72225538, -0.49400506, -0.10189462,\n",
-       "        0.46625041,  1.17249513,  1.96162394,  2.7651729 ,  3.51834739,\n",
-       "        4.18388087,  4.72975729,  5.12518731,  5.34530968,  5.37746661,\n",
-       "        5.21120735,  4.83670761,  4.25742491,  3.50882814,  2.63098395,\n",
-       "        1.66318115,  0.64761263, -0.36343331, -1.31682699, -2.16129428,\n",
-       "       -2.86679384, -3.45802397, -3.96762605, -4.42627761, -4.85656661,\n",
-       "       -5.26067161, -5.63662843, -5.98205326, -6.29512619, -6.57696787,\n",
-       "       -6.82877926, -7.05095765, -7.24311606, -7.40529533, -7.5388862 ,\n",
-       "       -7.64692465, -7.73158759, -7.78616865, -7.80173693, -7.7697987 ,\n",
-       "       -7.68691591, -7.56920846, -7.43986053, -7.32291275, -7.2387646 ,\n",
-       "       -7.19320346, -7.18645906, -7.21707559, -7.27996227, -7.35943358,\n",
-       "       -7.43610416, -7.49052047, -7.50437077, -7.4613082 , -7.34974026,\n",
-       "       -7.16312534, -6.90115868, -6.58083778, -6.22193917, -5.84114185,\n",
-       "       -5.44873734, -5.03861774, -4.60132083, -4.13087271, -3.62531821,\n",
-       "       -3.08657598, -2.517345  , -1.91890098, -1.28779336, -0.6072318 ,\n",
-       "        0.14315198,  0.98105923,  1.91817855,  2.94313468,  4.03457972,\n",
-       "        5.17090916,  6.33152886,  7.50383421,  8.67921038,  9.84974917,\n",
-       "       10.99704566, 12.00422756, 12.70381733, 12.92798475, 12.53733322,\n",
-       "       11.63663278, 10.45483717,  9.20950426,  8.09195329,  7.15272831,\n",
-       "        6.37238457,  5.73925726,  5.24742739,  4.90739947,  4.7390648 ,\n",
-       "        4.75940757,  4.97548323,  5.34220944,  5.76453463,  6.12927863,\n",
-       "        6.3287578 ,  6.35845603,  6.28472804,  6.17871077,  6.13939889,\n",
-       "        6.21090007,  6.31195156,  6.24818434,  5.74402417,  4.72114966,\n",
-       "        3.31877985,  1.71039378,  0.07520324, -1.48597488, -2.93984361,\n",
-       "       -4.25541792, -5.40298023, -6.34336158, -7.03043955, -7.42336262,\n",
-       "       -7.48312916, -7.20451277, -6.62326984, -5.78874105, -4.75632519,\n",
-       "       -3.56932618, -2.25895013, -0.85684836,  0.60498453,  2.06717041,\n",
-       "        3.43964812,  4.63239428,  5.55998765,  6.20201662,  6.60477654,\n",
-       "        6.80847719,  6.84173491,  6.71701297,  6.43547813,  5.99693171,\n",
-       "        5.40147503,  4.6652827 ,  3.82733606,  2.93213943,  2.02759063,\n",
-       "        1.14905331,  0.30786847, -0.49464144, -1.26534116, -2.00628058,\n",
-       "       -2.7037271 , -3.33986506, -3.90094449, -4.38489096, -4.79861621,\n",
-       "       -5.14919212, -5.44297523, -5.68632661, -5.88616244, -6.04845118,\n",
-       "       -6.17801581, -6.27871213, -6.35400056, -6.4076023 , -6.4439143 ,\n",
-       "       -6.46792517])"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compute_magnitude(data: np.array) -> np.array:\n",
     "    '''\n",
@@ -900,40 +831,64 @@
     "    return np.linalg.norm(data, axis=2)\n",
     "\n",
     "# correlation distance computation\n",
-    "def corr_distance(u, v):\n",
+    "def corr_distance(u: np.array, v: np.array) -> float:\n",
+    "    '''\n",
+    "    Calculate the correlation between to given samples.\n",
     "\n",
+    "    Args:\n",
+    "        u (np.array): The first sample to calculate the correlation with.\n",
+    "        v (np.array): The second sample to calculate the correlation with.\n",
     "\n",
+    "    Returns:\n",
+    "        float: The calculated correlation of the given samples.\n",
+    "    '''\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    ########################## PUT YOUR CODE HERE ##########################\n",
+    "    # Calculate the mean for the first sample\n",
     "    u_hat = np.mean(u)\n",
+    "\n",
+    "    # Calculate the mean for the second sample\n",
     "    v_hat = np.mean(v)\n",
+    "\n",
+    "    # Normalize both samples with their means\n",
     "    u = u - u_hat\n",
     "    v = v - v_hat\n",
+    "\n",
+    "    # Calculate the correlation between the two samples\n",
     "    corr = 1 - np.dot(u, v) / np.linalg.norm(u) * np.linalg.norm(v)\n",
-    "    ########################## PUT YOUR CODE HERE ##########################\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    # Return the calculated correlation\n",
     "    return corr\n",
     "\n",
-    "def parse_indexes(min_indexes, corrs, half_window=20):\n",
+    "def parse_indexes(min_indexes: np.array, corrs: np.array, half_window: int = 20) -> np.array:\n",
+    "    '''\n",
+    "    Check if the minimum indexes given are unique minimas in a given window size.\n",
+    "\n",
+    "    Args:\n",
+    "        min_indexes (np.array): An array of found minima indexes.\n",
+    "        corrs (np.array): The array of calculated correlation indexes for the sample where the minimas were found.\n",
+    "        half_window (int): Half the size of the minimum search window.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.array: The updated minima array.\n",
+    "    '''\n",
+    "\n",
     "    # checking if there is another minimum in a window of size 2*half_window, if so\n",
     "    # ignore the current minimum\n",
+    "\n",
+    "    # Create the array of parsed indexes\n",
     "    parsed_indexes = []\n",
+    "\n",
+    "    # For every minima index check if there is another minima in the given window\n",
     "    for index in min_indexes:\n",
-    "        if min(half_window, index) == np.argmin(\n",
-    "            corrs[max(index-half_window, 0):min(index+half_window, len(corrs))]\n",
-    "        ):\n",
+    "\n",
+    "        # In case there is another minima, ignore the current one\n",
+    "        if min(half_window, index) == np.argmin(corrs[max(index-half_window, 0):min(index+half_window, len(corrs))]):\n",
     "            parsed_indexes.append(index)\n",
+    "\n",
+    "    # Return the calculated unique minima's array\n",
     "    return np.array(parsed_indexes)\n",
     "\n",
-    "def compute_template(signal: np.array, template_initialization: np.array = None, first_sample_height: int = 12, corr_thr: float = 0.5, frequency: int = 50, window_size: int = 25, order: int = 4, ripple_db: int = 60, cutoff_hz: int = 3):\n",
+    "def compute_template(signal: np.array, template_initialization: np.array = None, first_sample_height: int = 12, corr_thr: float = 0.5, frequency: int = 50, template_size: int = 64, window_size: int = 25, order: int = 4, ripple_db: int = 60, cutoff_hz: int = 3):\n",
     "\n",
     "    # Calculate the first index where there is a peak\n",
     "    first_index = np.where(signal > first_sample_height)[0][0]\n",
@@ -947,14 +902,14 @@
     "    # Filter with low cutoff frequency to find where to begin the template\n",
     "    filtered_signal = fir_filter_signal(processed_signal, frequency, cutoff_hz, order, ripple_db)\n",
     "\n",
-    "    # Find the first minima of the signal\n",
+    "    # Find the second minima of the signal (more stable)\n",
     "    minima_ind = argrelmin(filtered_signal)[0][1]\n",
     "\n",
     "    # Search for the actual minima in a one second time window in the original signal\n",
-    "    actual_minima = np.argmin(processed_signal[minima_ind:minima_ind + frequency]) + minima_ind\n",
+    "    actual_minima = np.argmin(processed_signal[minima_ind:minima_ind + template_size]) + minima_ind\n",
     "\n",
     "    # Calculate half of the template size\n",
-    "    half_size = frequency // 2\n",
+    "    half_size = template_size // 2\n",
     "\n",
     "    # If there is no preinitialized template, select a one second window around the minima\n",
     "    if template_initialization is None:\n",
@@ -997,35 +952,65 @@
     "        # Convert array into np.array\n",
     "        corrs = np.array(corrs)\n",
     "\n",
-    "        # Step 6: Searching for matching points using correlation threshold\n",
+    "        # Search for samples whose correlation is smaller than the threshold\n",
     "        search_indexes = np.where(corrs < corr_thr)[0]\n",
+    "\n",
+    "        # Store the correlation values of those samples\n",
     "        searched_values = corrs[search_indexes]\n",
-    "        \n",
-    "        # Find the first minima in the correlation vector\n",
+    "\n",
+    "        # Look for the first minina in the correlation vector\n",
     "        minima = argrelmin(searched_values)[0]\n",
+    "\n",
+    "        # Store the indexes of the minima\n",
     "        min_indexes = search_indexes[minima]\n",
     "        \n",
     "        # Discard minima that are not the absolute minima within a small window (stability)\n",
     "        min_indexes = parse_indexes(min_indexes, corrs)\n",
     "\n",
-    "        # If no minima found or not enough, break the loop (person might have stopped walking)\n",
+    "        # If no minima found or not enough, break the loop\n",
     "        if len(min_indexes) < 2:\n",
     "            break\n",
     "        \n",
     "        # Move the window forward based on the detected minima\n",
     "        i += min_indexes[1]\n",
-    "\n",
-    "        print(template)\n",
-    "        print(processed_signal[i - half_size:i + half_size])\n",
     "        \n",
-    "        # Step 7: Update the template by a weighted average of the old template and the new signal\n",
+    "        # Update the template by a weighted average of the old template and the new signal\n",
     "        template = 0.9 * template + 0.1 * processed_signal[i - half_size:i + half_size]\n",
     "    \n",
-    "    return template\n",
-    "\n",
-    "print(len(final_accelerometer_train[0]))\n",
-    "compute_template(compute_magnitude(final_accelerometer_train)[0], frequency=256, window_size=75)"
+    "    # Return the obtained template\n",
+    "    return template"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLING_FREQ = 200\n",
+    "TEMPLATE_SIZE = 256\n",
+    "WINDOW_SIZE = 100\n",
+    "\n",
+    "# Calculate the magnitude of the accelerometer samples\n",
+    "magnitude = compute_magnitude(final_accelerometer_train)\n",
+    "\n",
+    "# Calculate the step template for template matching of samples\n",
+    "step_template = compute_template(signal = magnitude[0], frequency = SAMPLING_FREQ, template_size = TEMPLATE_SIZE, window_size = WINDOW_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Template Matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
