--- a/gait-recognition.ipynb
+++ b/gait-recognition.ipynb
@@ -2227,7 +2227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Epochs = 20 | Batch-Size = 128 | Validation-Split = 20% (Faster Training Parameters)"
+    "##### Epochs = 20 | Batch-Size = 32 | Validation-Split = 20% (Faster Training Parameters)"
    ]
   },
   {
@@ -2298,6 +2298,29 @@
     "    X_train, Y_train,\n",
     "    validation_split=0.2,\n",
     "    epochs=20,\n",
+    "    batch_size=32,\n",
+    "    verbose=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Epochs = 30 | Batch-Size = 32 | Validation-Split = 20% (More Epoch Faster Training Parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model with the given data\n",
+    "model.fit(\n",
+    "    X_train, Y_train,\n",
+    "    validation_split=0.2,\n",
+    "    epochs=30,\n",
     "    batch_size=32,\n",
     "    verbose=2\n",
     ")"
