--- a/gait-recognition.ipynb
+++ b/gait-recognition.ipynb
@@ -317,10 +317,7 @@
     "# Test Data\n",
     "accelerometer_test = load_dev_gait_information(1, ACCELEROMETER, TEST)\n",
     "gyroscope_test = load_dev_gait_information(1, GYROSCOPE, TEST)\n",
-    "output_test = load_purpose_output_information(1, TEST)\n",
-    "\n",
-    "# Store the first sample from accelerometer train dataset\n",
-    "acc_step_template = accelerometer_train[0]"
+    "output_test = load_purpose_output_information(1, TEST)"
    ]
   },
   {
@@ -532,9 +529,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-02-11 22:50:07--  https://drive.usercontent.google.com/download?id=1EA9gIHsGSAnkyjbYin8n9-1YTCzEMbXT&export=download&authuser=0&confirm=t&uuid=77855083-a344-4d10-a79d-3fa88d41a7fd&at=AIrpjvOfNth58sQSfgHkEq3tVHMu%3A1737752465177\n",
+      "Resolving drive.usercontent.google.com (drive.usercontent.google.com)... 216.58.204.225, 2a00:1450:4002:416::2001\n",
+      "Connecting to drive.usercontent.google.com (drive.usercontent.google.com)|216.58.204.225|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 117188447 (112M) [application/octet-stream]\n",
+      "Saving to: ‘datasets/dataset4.zip’\n",
+      "\n",
+      "datasets/dataset4.z 100%[===================>] 111,76M  3,96MB/s    in 23s     \n",
+      "\n",
+      "2025-02-11 22:50:32 (4,86 MB/s) - ‘datasets/dataset4.zip’ saved [117188447/117188447]\n",
+      "\n",
+      "Archive:  datasets/dataset4.zip\n",
+      "   creating: datasets/dataset4/Dataset #4/\n",
+      "   creating: datasets/dataset4/Dataset #4/test/\n",
+      "   creating: datasets/dataset4/Dataset #4/test/Inertial Signals/\n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_acc_x.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_acc_y.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_acc_z.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_gyr_x.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_gyr_y.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/Inertial Signals/test_gyr_z.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/test/y_test.txt  \n",
+      "   creating: datasets/dataset4/Dataset #4/train/\n",
+      "   creating: datasets/dataset4/Dataset #4/train/Inertial Signals/\n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_acc_x.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_acc_y.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_acc_z.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_gyr_x.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_gyr_y.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/Inertial Signals/train_gyr_z.txt  \n",
+      "  inflating: datasets/dataset4/Dataset #4/train/y_train.txt  \n"
+     ]
+    }
+   ],
    "source": [
     "!wget 'https://drive.usercontent.google.com/download?id=1EA9gIHsGSAnkyjbYin8n9-1YTCzEMbXT&export=download&authuser=0&confirm=t&uuid=77855083-a344-4d10-a79d-3fa88d41a7fd&at=AIrpjvOfNth58sQSfgHkEq3tVHMu%3A1737752465177' -O datasets/dataset4.zip\n",
     "\n",
@@ -549,9 +584,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'datasets/dataset4/train_acc_x.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[132], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Train Data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m accelerometer_train \u001b[38;5;241m=\u001b[39m \u001b[43mload_dev_gait_information\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mACCELEROMETER\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTRAIN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m gyroscope_train \u001b[38;5;241m=\u001b[39m load_dev_gait_information(\u001b[38;5;241m4\u001b[39m, GYROSCOPE, TRAIN)\n\u001b[1;32m      4\u001b[0m output_train \u001b[38;5;241m=\u001b[39m load_purpose_output_information(\u001b[38;5;241m4\u001b[39m, TRAIN)\n",
+      "Cell \u001b[0;32mIn[3], line 86\u001b[0m, in \u001b[0;36mload_dev_gait_information\u001b[0;34m(dataset, device, purpose)\u001b[0m\n\u001b[1;32m     83\u001b[0m     paths\u001b[38;5;241m.\u001b[39mappend(axis_path)\n\u001b[1;32m     85\u001b[0m \u001b[38;5;66;03m# Read and return the information desired\u001b[39;00m\n\u001b[0;32m---> 86\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mload_gait_information\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpaths\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpaths\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpaths\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 31\u001b[0m, in \u001b[0;36mload_gait_information\u001b[0;34m(x, y, z)\u001b[0m\n\u001b[1;32m     28\u001b[0m samples \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Open the dataset file location\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Read every row of the dataset\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[1;32m     35\u001b[0m \n\u001b[1;32m     36\u001b[0m     \u001b[38;5;66;03m# Conversion of the signals values and addition to the samples list\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'datasets/dataset4/train_acc_x.txt'"
+     ]
+    }
+   ],
    "source": [
     "# Train Data\n",
     "accelerometer_train = load_dev_gait_information(4, ACCELEROMETER, TRAIN)\n",
